.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in TwitterServer's user's guide.

1.x
-----

1.8.0
~~~~~~~

New Features
------------
  * Add the ability to promote objects to old gen before serving

Runtime Behavior Changes
------------------------
  * Add merge_base merge_base_commit_date and scm_repository to server_info
  * AdminHttpServer now disables tracing
  * Export gauge on eden allocations
  * Improve heuristic for returning html or not in WebHandler
  * Initial redesign of admin pages

1.7.6
~~~~~~~

twitter-server: Add gauge on eden allocations
twitter-server: Do not trace the admin http server
twitter-server: JvmStats needs to call Allocations.start()
twitter-server: Log severely if a flag is read at the wrong time
twitter-server: Parameterize IndexHandler on a `patterns: Seq[String]`
twitter-server: Proper resource loading in admin pages
twitter-server: Redesign of twitter-server admin page

1.7.3
~~~~~~~

- Add admin endpoint for per-client configuration
- Add trace ID to twitter-server logging
- Create a logging handler for on-the-fly logging updates

1.7.2
~~~~~~~

- release finagle v6.18.0
- release util v6.18.0
- user guide: Add blurb about filtering out stats

1.7.1
~~~~~~~

- Upgrade versions of all dependencies
- Admin dtab handler: display base dtab
- Change productivity stat to cpuTime/wallTime

1.7.0
~~~~~~~

- Bump finagle to 6.16.1-SNAPSHOT
- Bump util to 6.16.1-SNAPSHOT
- Disable admin server stats

1.6.3
~~~~~~~

- Define type for statsReceiver explicitly so that it can be overloaded
- Store gauge references (otherwise only weakly referenced)
- Enforce close grace period for com.twitter.app.App
- upgrade finagle/util to 6.15.0

1.6.2
~~~~~~~

- Add com.twitter.io.Charsets and replace the use of org.jboss.netty.util.CharsetUtil
- Fix twitter-server execution test

1.6.1
~~~~~

- upgrade finagle to 6.13.1
- upgrade util to 6.13.2

1.6.0