@@ -6,10 +6,11 @@ import com.twitter.util.Future
 import java.lang.management.ManagementFactory
 import java.util.{Date, Properties}
 import org.jboss.netty.handler.codec.http._
+import scala.collection.JavaConverters._
 
 /**
  * A simple http service for serving up information pulled from a build.properties
- * file. The ClassLoader for the given object is used to load the buid.properties file,
+ * file. The ClassLoader for the given object is used to load the build.properties file,
  * which is first searched for relative to the given object's class's package
  * (class-package-name/build.properties), and if not found there, then it is searched for
  * with an absolute path ("/build.properties").
@@ -30,34 +31,25 @@ class ServerInfoHandler(obj: AnyRef) extends Service[HttpRequest, HttpResponse] 
       }
   }
 
-  case class ServerInfo(
-    name: String,
-    version: String,
-    build: String,
-    build_revision: String,
-    build_branch_name: String,
-    build_last_few_commits: Seq[String],
-    merge_base: String,
-    merge_base_commit_date: String,
-    scm_repository: String,
-    start_time: String,
-    var uptime: Long = 0)
+  private[this] val basicServerInfo = Map(
+    "name" -> "unknown",
+    "version" -> "0.0",
+    "build" -> "unknown",
+    "build_revision" -> "unknown",
+    "build_branch_name" -> "unknown",
+    "merge_base" -> "unknown",
+    "merge_base_commit_date" -> "unknown",
+    "scm_repository" -> "unknown",
+    "start_time" -> new Date(mxRuntime.getStartTime).toString
+  )
 
-  private[this] val serverInfo =
-    ServerInfo(
-      buildProperties.getProperty("name", "unknown"),
-      buildProperties.getProperty("version", "0.0"),
-      buildProperties.getProperty("build_name", "unknown"),
-      buildProperties.getProperty("build_revision", "unknown"),
-      buildProperties.getProperty("build_branch_name", "unknown"),
+  private[this] val serverInfo = basicServerInfo ++ buildProperties.asScala ++ Map(
+    "build_last_few_commits" ->
       buildProperties.getProperty("build_last_few_commits", "unknown").split("\n"),
-      buildProperties.getProperty("merge_base", "unknown"),
-      buildProperties.getProperty("merge_base_commit_date", "unknown"),
-      buildProperties.getProperty("scm_repository", "unknown"),
-      (new Date(mxRuntime.getStartTime())).toString)
+    "build" ->
+      buildProperties.getProperty("build_name", "unknown")
+  ) - "build_name"
 
-  def apply(req: HttpRequest) = {
-    serverInfo.uptime = mxRuntime.getUptime
-    Future.value(JsonConverter(serverInfo))
-  }
+  def apply(req: HttpRequest) =
+    Future.value(JsonConverter(serverInfo + ("uptime" -> mxRuntime.getUptime)))
 }
