@@ -1,0 +1,3 @@
+name = twitter-server
+version = 0.0.0
+foo = bar
